Romanian language update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6434 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -76,7 +76,6 @@ foxtrick.ShowForumPrefButton.desc=Link catre setarile forumului pe toate paginil
 foxtrick.AlltidFlags.desc=Adauga steaguri si link-uri Alltid userilor in antetul mesajelor
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Adauga o legatura catre pagina seriei, daca avatarul managerului este prezent
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Adauga o legatura catre pagina seriei in Alltid
-foxtrick.LinksCustom.desc=Adauga optiunea de a adauga linkuri modificate. Instructiuni: Activand optiunea asta, vor aparea 'adauga linkuri', respectiv 'sterge' la linkurile foxtrick existente. Click 'sterge' pentru a sterge un link propriu si 'adauga' pentru a aparea o casuta in care poti adauga un link nou si o pictograma. Pictograma trebuie sa aiba 16x16 pixeli. Dezactivand modulul se vor ascunde aceste optiuni. Linkurile modificate, insa, vor fi afisate.
 foxtrick.LinksLeague.desc=Adauga legaturi externe la pagina seriei
 foxtrick.LinksTeam.desc=Adauga legaturi externe la pagina echipei
 foxtrick.LinksCountry.desc=Adauga legaturi externe la pagina tarii
@@ -215,6 +214,7 @@ foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
+foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 foxtrick.CopyMatchID.desc=Copiaza ID-ul meciului cand dai click pe pictograma meciurilor liga/cupa/amical sau meciurilor din arhiva. Pentru suporteri functioneaza si pe pagina 'Meciuri directe'
 foxtrick.HeaderFix.desc=Fixeaza antetul in timpul scrollului
 foxtrick.HeaderFix.FixLeft.desc=De asemenea fixeaza submeniul in timpul scrollului
@@ -309,7 +309,7 @@ foxtrick.CountryList.SelectBoxes.desc=Schimba numele tarilor din Engleza in nume
 foxtrick.CountryList.TeamPage.desc=Afiseaza un link-text catre liga inaintea regiuii si seriei pe pagina echipei
 foxtrick.CountryList.ManagerPage.desc=Afiseaza un link-text catre liga inainte de limba pe pagina managerului
 foxtrick.CountryList.HideFlagOntop.desc=Inlatura linkul catre liga de pe pagina echipei
-foxtrick.MatchTables.desc=Inlatura spatiul alb la tabelul meciurilor pe designul simplu
+foxtrick.MatchTables.desc=Inlatura spatiul alb la tabelul meciurilor
 foxtrick.MatchTables.RemoveTime.desc=Inlatura ora meciului in tabelul curent al meciurilor
 foxtrick.YouthPromotes.desc=Arata numarul de zile pana la promovarea unui junior
 foxtrick.HTMSPrediction.desc=Adauga predictie rezultat pe pagina meciurilor
@@ -646,7 +646,6 @@ foxtrick.linkscustom.helptext=In primul rand, acesta este doar modul de editor. 
 foxtrick.linkscustom.helptext2=De asemenea puteti exporta linkurile. Pentru a face acest lucru puteti da click pe butonul Export si selectati un fisier pentru a salva acel link. Linkurile sunt adaugate in acest fisier, puteti salva mai multe linkuri intr-un singur fisier. Pentru a importa linkuri mergeti la casuta preferinta de dialog si apoi import preferinte. Doar preferintele prezente in fisierul selectat vor fi importate, care in acest caz sunt linkurile proprii. Nici unul din linkurile precedente nu vor fi sterse.
 foxtrick.matches.income=Venituri:
 foxtrick.newmailtoyou=Mesaje noi catre tine
-foxtrick.newforumtoyou=Mesaje noi catre tine pe forum
 foxtrick.tweaks.Birthdays=Zile de nastere
 foxtrick.tweaks.BirthdayToday=Zile de nastere astazi
 foxtrick.tweaks.BirthdayLastWeek=Zile de nastere saptamana trecuta
@@ -683,8 +682,6 @@ Coach=Antrenor
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 foxtrick.tweaks.actions=Actiuni
-# Look on your players page (Club -> Players) to the box title on the right with the list of players
-foxtrick.tweaks.overview=Lista jucătorilor
 foxtrick.tweaks.writeinguestbook=Scrie in Cartea de Oaspeti
 foxtrick.tweaks.copyplayerad=Copiaza jucatorul in clipboard
 foxtrick.tweaks.copied=Jucatorul a fost copiat in clipboard
@@ -726,9 +723,6 @@ foxtrick.matches.wronglang=Foxtrick: Datele nu pot fi afisate pentru ca limba du
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
 foxtrick.matches.suppstats=Statistici Supporter
-# Look on your Matches page: copy the header of the sold seats box
-foxtrick.matches.soldseats=Locuri vandute
-
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
