locale/zh: fix typo.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6446 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -220,7 +220,7 @@ foxtrick.ContextMenuCopy.HtMl.desc=以 HT-ML 格式复制选定内容的选项
 foxtrick.ContextMenuCopy.Table.desc=以 HT-ML 格式复制表格的选项
 foxtrick.NewMail.desc=高亮新邮件数量与新论坛消息数量
 foxtrick.NewMail.NotifyMail.desc=在有新邮件到来时显示通知
-foxtrick.NewMail.NotifyMail.desc=在有论坛回复时显示通知
+foxtrick.NewMail.NotifyForum.desc=在有论坛回复时显示通知
 foxtrick.CopyTrainingReport.desc=在青年队训练页面中添加一个复制训练报告的按钮
 foxtrick.CopyTrainingReport.OpenHTYpage.desc=在复制后打开 hattrick-youthclub.org
 foxtrick.CopyScoutReport.desc=在青年球员详细页面中添加一个复制球探评论的按钮
