--- a/content/locale/vls/foxtrick.properties
+++ b/content/locale/vls/foxtrick.properties
@@ -1,4 +1,4 @@
-# Dutch language file
+# Flemish language file
 # UTF-8 encoded nl-NL
 #  Original by eekels  [teamid=768188] (r6058)
 # Additions by CoRrRan [teamid=144536] (r6323)
@@ -584,7 +584,7 @@ foxtrick.staffconfirmationhire=Wil je %num %kind inhuren?
 foxtrick.staffconfirmationsack=Wil je %num %kind ontslaan?
 foxtrick.ntremoveconfirmation=Wil je deze speler toevoegen aan / verwijderen uit je team?
 foxtrick.confirmstripserver=Wil je de server uit de link verwijderen om de link bruikbaar te maken op het forum?
-foxtrick.conferences.signaturetoggle=Verberg handtekeningen op de forums. Toon een link om de handtekening alsnog te tonen.
+foxtrick.conferences.signaturetoggle=Handtekening
 foxtrick.conferences.markunread=Markeer als ongelezen vanaf hier
 foxtrick.tweaks.selectplayer=Selecteer speler
 foxtrick.linkscustom.selecticon=Selecteer icoon
