--- a/content/locale/vls/foxtrick.properties
+++ b/content/locale/vls/foxtrick.properties
@@ -584,7 +584,7 @@ foxtrick.staffconfirmationhire=Wil je %num %kind inhuren?
 foxtrick.staffconfirmationsack=Wil je %num %kind ontslaan?
 foxtrick.ntremoveconfirmation=Wil je deze speler toevoegen aan / verwijderen uit je team?
 foxtrick.confirmstripserver=Wil je de server uit de link verwijderen om de link bruikbaar te maken op het forum?
-foxtrick.conferences.signaturetoggle=Handtekening
+foxtrick.conferences.signaturetoggle=Toon handtekening
 foxtrick.conferences.markunread=Markeer als ongelezen vanaf hier
 foxtrick.tweaks.selectplayer=Selecteer speler
 foxtrick.linkscustom.selecticon=Selecteer icoon
