Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6457 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -176,7 +176,6 @@ foxtrick.FixcssProblems.RTL_Fixes.desc=Коригује неке ХТ грешк
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Додаје кориговани скрол бар страницама форума. Подрхтавање слике је мање него само са укљученом Хеттрик опцијом.
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Повећава величину фонта за ХТ формат 'small_font'.
 foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Уклони 'Провири на форум' са свих страница.
-foxtrick.FixcssProblems.Remove_Teaser_Background.desc=Прикажи оригиналну Хеттрик позадину(без црних рупа).
 foxtrick.SimplePresentation.desc=Додатне опције за изглед.
 foxtrick.SimplePresentation.League_Table.desc=Додаје вертикалне линије у табели лиге ради боље прегледности.
 foxtrick.SimplePresentation.Guestbook.desc=Побољшава читљивост порука у књизи гостију (уоквирује поруке сивом подлогом).
@@ -921,6 +920,8 @@ exception.error=Дошло је до грешке: %s
 foxtrick=Фокстрик
 preferences=Подешавања
 foxtrick.prefs.preferences=Фокстрик подешавања
+foxtrick.log=Фокстрик лог
+
 status.active=укључен
 status.enabled=укључен, али неактиван на %s
 status.disabled=искључен
