--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -233,14 +233,15 @@ foxtrick.PlayerBirthday.desc=Приказује последње и надола
 foxtrick.AddHtLiveToOngoing.desc=Додаје дугме 'HТ Live' за мечеве који су у току.
 foxtrick.MovePlayerSelectbox.desc=Помера према горе падајаћи мени за играче на страници играча.
 foxtrick.SeasonStats.desc=Приказује статистику на страницама архиве мечева.
-foxtrick.LeagueNewsFilter.desc=Означава тимове који су током протекле недеље поставили или мењали налоге за меч и додаје филтер за новости на страници лиге. Подесите ваш стандардни филтер испод:
+foxtrick.LeagueNewsFilter.desc=Додаје филтер за новости на страници лиге. Подесите ваш стандардни филтер испод:
 foxtrick.LeagueNewsFilter.all.desc=Приказује све вести.
 foxtrick.LeagueNewsFilter.friendlies.desc=Прикажи само међународне пријатељске утакмице и промене тренера.
 foxtrick.LeagueNewsFilter.transfers.desc=Прикажи само трансфере.
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Прикажи само промене налога за мечеве.
-foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Означи тимове који су током протекле недеље поставили или мењали налоге за меч.
-foxtrick.LeagueNewsFilter.highlight_wins.desc=Означи тимове који су победили у последњем колу.
-foxtrick.LeagueNewsFilter.gray_bots.desc=Означи сивом бојом ботове и тимове без власника.
+foxtrick.ShowLineupSet.desc=Highlight teams that have set a lineup, and/or ownerless teams, and/or winning teams in league fixture/result table
+foxtrick.ShowLineupSet.LineupSet.desc=Означи тимове који су током протекле недеље поставили или мењали налоге за меч.
+foxtrick.ShowLineupSet.Ownerless.desc=Означи сивом бојом ботове и тимове без власника.
+foxtrick.ShowLineupSet.Winning.desc=Означи тимове који су победили у последњем колу.
 foxtrick.MoveManagerOnline.desc=На страници региона, пребацује на врх листе менаџере који су онлајн. Упозорење! Ова функција јако успорава учитавање странице ако у региону има више од 100 онлајн играча.
 foxtrick.TeamPopupLinks.OpenNewTab.desc=Отвара поп-ап линкове у новим табовима.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Додаје TeamPopupLinks линковима ка клубовима.
