Russian translation update to r6459
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6461 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/faq.xml
+++ b/content/locale/ru/faq.xml
@@ -67,7 +67,7 @@
 				Как было сказано выше, никакие личные данные не передаются.
 			</xhtml:p>
 			<xhtml:p>
-				Единственное исключение — модуль <xhtml:a href="#module=htmsStatistics">htmsStatistics</xhtml:a>,
+				Единственное исключение — модуль <xhtml:a href="#module=HTMSPrediction">HTMSPrediction</xhtml:a>,
 				в котором рейтинги, показанные в матчах, передаются на сайт <xhtml:a href="http://www.fantamondi.it/HTMS/index.php?page=home&amp;lang=en">Hattrick Match Statistics</xhtml:a> с использованием XMLHttpRequest.
 			</xhtml:p>
 		</answer>
