Romanian language update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6477 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -4,7 +4,6 @@
 
 # Hints:
 # translate the right side of the = sign.
-# don't use " in your translations.
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
@@ -237,14 +236,11 @@ foxtrick.CopyPlayerSource.OpenHTYpage.desc=Deschide intr-un tab nou hattick-yout
 foxtrick.PlayerBirthday.desc=Arata ultimele si urmatoarele zile de nastere in pagina jucatorilor.
 foxtrick.MovePlayerSelectbox.desc=Muta casuta de selectare a jucatorilor pe pagina detaliata a jucatorului
 foxtrick.SeasonStats.desc=Arata date pe pagina cu arhiva meciurilor
-foxtrick.LeagueNewsFilter.desc=foxtrick.LeagueNewsFilter.desc=Pe pagina seriilor evidentiaza echipele care si-au schimbat line up-ul de-a lungul saptamanii si adauga filtere pentru stirile seriei. Seteaza-ti filtrul implicit mai jos
+foxtrick.LeagueNewsFilter.desc=Filtreaza pentru a arata un anumit tip de stiri.
 foxtrick.LeagueNewsFilter.all.desc=Arata toate stirile
 foxtrick.LeagueNewsFilter.friendlies.desc=Arata doar stiri despre amicale si antrenori noi
 foxtrick.LeagueNewsFilter.transfers.desc=Arata stiri doar despre transferuri
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Arata stiri doar despre schimbarile ordinelor
-foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Evidentiaza echipele care si-au schimbat line up-ul recent in tabelul meciurilor urmatoare
-foxtrick.LeagueNewsFilter.highlight_wins.desc=Evidentiaza echipele castigatoare in tabelul meciurilor jucate
-foxtrick.LeagueNewsFilter.gray_bots.desc=Coloreaza echipele bot si fara proprietari in ambele tabele de meciuri
 foxtrick.MoveManagerOnline.desc=Muta managerii online pe pagina regiunilor. Atentie! Va functiona foarte incet daca numarul managerilor online depaseste 100.
 foxtrick.TeamPopupLinks.OpenNewTab.desc=Deschide teampopup-urile in taburi noi
 foxtrick.TeamPopupLinks.TeamLinks.desc=Adauga TeamPopupLinks la linkurile echipei
@@ -294,9 +290,9 @@ foxtrick.SkillColoring.skill_select.desc=Arata calitatile si ca numere si la tra
 foxtrick.SkillColoring.no_skill_links.desc=Ascunde fontul verde dat de HT-i
 foxtrick.BackgroundFixed.desc=Imagine fundal statica.
 foxtrick.MatchIncome.desc=Venituri meci in pagina detaliata a meciului
-foxtrick.YouthSkillHideUnknown.desc=Mai mult spatiu la pagina juniorilor
+foxtrick.YouthSkillHideUnknown.desc=Ascunde calitatile necunoscute ale jucatorilor si/sau "maximum" pe pagina juniorilor.
 foxtrick.YouthSkillHideUnknown.desc=Ascunde calitatile juniorilor care sunt necunoscute
-foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ascunde cuvantul 'maxim' pentru a castiga spatiu
+foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ascunde cuvantul 'maximum' pentru a castiga spatiu
 foxtrick.SkillTable.desc=Arata calitatile jucatorilor sub forma unui tabel.
 foxtrick.SkillTable.OtherTeams.desc=Activeaza si pentru alte echipe
 foxtrick.HighlightCupwins.desc=Evidentiaza echipele castigatoare in meciurile din cupa pe pagina meciurilor de cupa
@@ -352,6 +348,10 @@ foxtrick.MyMonitor.desc=Monitorizeaza meciurile recente ale prietenilor si le ad
 foxtrick.MarkAllAsRead.desc=Un buton pentru a marca toate mesajele din forumuri ca citite
 foxtrick.ShowFriendlyBooked.desc=Afiseaza daca o echipa si-a programat amical pe pagina seriei
 foxtrick.TickerAlert.desc=Afiseaza o notificare cand un ticker a venit
+foxtrick.ShowLineupSet.desc=Evidentiaza echipele care nu si-au dat ordinele, si/sau echipele fara proprietar, si/sau echipele castigatoare la rezultate
+foxtrick.ShowLineupSet.LineupSet.desc=Evidentiaza echipele care nu si-au dat ordinele de joc
+foxtrick.ShowLineupSet.Ownerless.desc=Evidentiaza echipele fara proprietar
+foxtrick.ShowLineupSet.Winning.desc=Evidentiaza echipele castigatoare
 -----------------------------------------------------------------------------
 
 
@@ -796,9 +796,9 @@ Youth=Juniori
 team.status.booked=Friendly booked
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Ascunde plasturele
-TransferSearchResultFilters.hide_injured=Ascunde accidentarea
-TransferSearchResultFilters.cards=Cartonase:
+TransferSearchResultFilters.hideBruised=Ascunde plasturele
+TransferSearchResultFilters.hideInjured=Ascunde accidentarea
+TransferSearchResultFilters.hideSuspended=Ascunde jucatorii suspendati
 TransferSearchResultFilters.days=Zile:
 
 # refer to transfer search form
@@ -911,6 +911,8 @@ exception.error=Error %s
 foxtrick=FoxTrick
 preferences=Preferinte
 foxtrick.prefs.preferences=Preferinte FoxTrick
+foxtrick.log=FoxTrick Log
+
 status.active=Activ
 status.enabled=Activat, dar nu este activ in %s
 status.disabled=Dezactivat
@@ -982,6 +984,6 @@ disable_all_foxtrick_modules_ask=Esti sigur ca vrei sa dezactivezi toate modulel
 
 foxtrick.prefs.AdditionalOptions=Alte optiuni
 foxtrick.prefs.smallcopyicons=Iconite mici de copiat in locul casutei separate
-foxtrick.prefs.DisplayHTMLDebugOutput=Arata date de iesire debug optionale pe pagina Hattrickului. (pentru developeri)
+foxtrick.prefs.DisplayHTMLDebugOutput=Arata log-ul Foxtrick in josul paginii (pentru debugging)
 
 ###EOF
