--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -13,6 +13,12 @@
 <item>Уколико желите да вам Фокстрик не приказује обавештење о променама после сваког ажурирања искључите опцију "Прикажи поруку о променама после ажурирања Фокстрика" у табу <xhtml:a href="#tab=main">"Главне опције"</xhtml:a>.</item>
 
 </note>
+<note version="0.7.1">
+<item>Модул <module>LeagueNewsFilter</module> подељен у два: <module>LeagueNewsFilter</module> и модул <module>ShowLineupSet</module>.</item>
+<item>Модификације због прилагођавања новој верзији странице са резултатима трансфера. (ryanli, taised)</item>
+<item>Ажуриран превод. (ryanli, CoRrRan, ljushaff, _KOHb_)</item>
+<item>Још неке ситне поправке. (ryanli)</item>
+</note>
 
 <note version="0.7">
 <item>Исландски језик. (LA-LordBastard)</item>
