Russian translation update to r6481
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6482 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,5 +1,5 @@
 ﻿# ru-RU (Russian language file)
-# based on MASTER language file r6459
+# based on MASTER language file r6481
 # by _KOHb_ [teamId=28914]
 
 # Hints:
@@ -759,9 +759,9 @@ Youth=Юноши
 team.status.booked=Назаначен товарищеский матч
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Скрыть повреждённых
-TransferSearchResultFilters.hide_injured=Скрыть травмированных
-TransferSearchResultFilters.cards=Карточки:
+TransferSearchResultFilters.hideBruised=Скрыть повреждённых
+TransferSearchResultFilters.hideInjured=Скрыть травмированных
+TransferSearchResultFilters.hideSuspended=Скрыть дисквалифицированных
 TransferSearchResultFilters.days=Дни:
 
 # refer to transfer search form
