--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -14,6 +14,13 @@
 		<item>Вы можете отключить показ этого сообщения после каждого обновления, запретив "Показать информацию о выпуске после обновления FoxTrick" на вкладке <xhtml:a href="#tab=main">Главные</xhtml:a> настроек.</item>
 	</note>
 
+	<note version="0.7.1">
+		<item>Модуль <module>LeagueNewsFilter</module> разделён на модули <module>LeagueNewsFilter</module> и <module>ShowLineupSet</module>.</item>
+		<item>Изменения для соответствия новой странице результатов поиска трансферов (ryanli, taised).</item>
+		<item>Обновления переводов (ryanli, CoRrRan, ljushaff, _KOHb_).</item>
+		<item>Несколько мелких исправлений (ryanli).</item>
+	</note>
+
 	<note version="0.7">
 		<item>Исландский перевод (LA-LordBastard).</item>
 		<item>Фламандский перевод скопирован с голландского (ryanli).</item>
@@ -62,8 +69,7 @@
 		<item>Параметр для показа рейтинга HatStats по линиям в модуле <module>Ratings</module> (taised).</item>
 		<item>Добавлен белорусский перевод (LA-Stolik).</item>
 		<item>Добавлены ответы на некоторые часто задаваемые вопросы на вкладке <xhtml:a href="#tab=help">Помощь</xhtml:a> (ryanli).</item>
-		<item>Добавлен небольшой FAQ во вкледке <xhtml:a href="#tab=help">Помощь</xhtml:a> (ryanli).</item>
-		<item>Новый значок для ссылок на отчёты (ljushaff).</item>
+			<item>Новый значок для ссылок на отчёты (ljushaff).</item>
 		<item>Модуль <module>YouthPromotes</module> также показывает и самый ранний день для вызова игрока.</item>
 		<item>Большая часть модулей расширения теперь работает под Google Chrome.</item>
 		<item>Некоторые исправления для соответствия последним изменениям HT.</item>
