--- a/content/locale/zh/release-notes.xml
+++ b/content/locale/zh/release-notes.xml
@@ -14,9 +14,9 @@
 </note>
 
 <note version="0.7.1">
-<item>模块 <module>LeagueNewsFilter</module> 被分为 <module>LeagueNewsFilter</module> 与 <module>ShowLineupSet</module>.</item>
+<item>模块 <module>LeagueNewsFilter</module> 被分为 <module>LeagueNewsFilter</module> 与 <module>ShowLineupSet</module>. (ryanli)</item>
 <item>用于适应新转会搜索结果页面的一些修正. (ryanli, taised)</item>
-<item>语言更新. (ryanli, CoRrRan, ljushaff, _KOHb_)</item>
+<item>语言更新. (ryanli, CoRrRan, ljushaff, _KOHb_, slader, ElChiquitin)</item>
 <item>其他一些细微的更改. (ryanli)</item>
 </note>
 
