Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6486 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -814,7 +814,7 @@ team.status.booked=Заказао је пријатељску за ову нед
 # transferresultsearchfilters
 TransferSearchResultFilters.hideBruised=Сакриј угруване
 TransferSearchResultFilters.hideInjured=Сакриј повређене
-TransferSearchResultFilters.cards=Сакриј суспендоване
+TransferSearchResultFilters.hideSuspended=Сакриј суспендоване
 TransferSearchResultFilters.days=Дана:
 
 # refer to transfer search form
