Icelandic translation update to r6488
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6488 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -6,7 +6,6 @@
 
 # Hints:
 # translate the right side of the = sign.
-# don't use " in your translations.
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
 # sentences starting with # are comments. leave them unchanged
 
@@ -232,14 +231,11 @@ foxtrick.CopyPlayerSource.OpenHTYpage.desc=Opna hattrick-youthclub.org í nýjum
 foxtrick.PlayerBirthday.desc=Sýna síðustu og komandi afmæli í yfirliti leikmanna
 foxtrick.MovePlayerSelectbox.desc=Færa valglugga leikmanna upp á upplýsingasíðu leikmanna
 foxtrick.SeasonStats.desc=Sýna tölfræði á skjalasafnasíðu leikja
-foxtrick.LeagueNewsFilter.desc=Auðkenna lið á deildarsíðu sem hafa nýlega breytt eða stillt upp liðinu og bæta við síu-valglugga fyrir nýjustu fréttir í deildinni.
+foxtrick.LeagueNewsFilter.desc=Síur til að sýna ákveðnar tegundir af deildarfréttum.
 foxtrick.LeagueNewsFilter.all.desc=Sýna allar fréttir
 foxtrick.LeagueNewsFilter.friendlies.desc=Sýna aðeins alþjóðlega vináttuleiki og ráðningar á nýjum þjálfurum
 foxtrick.LeagueNewsFilter.transfers.desc=Sýna aðeins leikmannakaup og sölur
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Sýna aðeins breytingar á liðsuppstillingu
-foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Auðkenna lið sem breyttu eða stilltu upp liðinu nýlega í 'Næsta umferð' töflunni
-foxtrick.LeagueNewsFilter.highlight_wins.desc=Auðkenna vinningsliðið í 'Síðasta umferð' töflunni
-foxtrick.LeagueNewsFilter.gray_bots.desc=Gráa út eigandalaus lið í leikjatöflunni
 foxtrick.MoveManagerOnline.desc=Færa framkvæmdarstjóra sem eru nettengdir upp á svæðissíðunni. Varúð! Þetta verður mjög hægt ef nettengdir notendur fara yfir 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Bætir við sprettiglugga á liðstengla
 foxtrick.TeamPopupLinks.UserLinks.desc=Bætir við sprettiglugga á framkvæmdarstjóratengla
@@ -270,9 +266,9 @@ foxtrick.SkillColoring.skill_select.desc=Sýna einnig númer á sölulistanum þ
 foxtrick.SkillColoring.no_skill_links.desc=Felur undirstrikun og grænt letur sem HT sýnir
 foxtrick.BackgroundFixed.desc=Kyrrstæð bakgrunnsmynd.
 foxtrick.MatchIncome.desc=Áhorfendatekjur á leikskýrslusíðunni
-foxtrick.YouthSkillHideUnknown.desc=Meira pláss á unglingaleikmannasíðunum
-foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Fela hæfni unglings sem eru ókunn á yfirlitssíðu unglingaleikmanns
-foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Fela 'Hámark' lykilorð til að fá meira pláss, sérstaklega ef andlitsmyndir eru virkjaðar
+foxtrick.YouthSkillHideUnknown.desc=Fela ókunna hæfni og/eða "hámark" orð á unglingaleikmannasíðunni
+foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Fela ókunna hæfni
+foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Fela orðið "Hámark" til að fá meira pláss
 foxtrick.SkillTable.desc=Sýna hæfni leikmanns sem töflu.
 foxtrick.SkillTable.OtherTeams.desc=Virkja fyrir önnur lið
 foxtrick.HighlightCupwins.desc=Auðkenna vinningslið á bikarleikjasíðunni
@@ -285,7 +281,7 @@ foxtrick.CountryList.SelectBoxes.desc=Skiptir út enskum þjóðarnöfnum í val
 foxtrick.CountryList.TeamPage.desc=Sýnir textatengil á land á undan svæði og deild á liðssíðu
 foxtrick.CountryList.ManagerPage.desc=Sýnir textatengil á land á undan tungumálinu á framkvæmdarstjórasíðunni
 foxtrick.CountryList.HideFlagOntop.desc=Fjarlægir myndatengilinn á land á liðssíðu
-foxtrick.MatchTables.desc=Fjarlægir autt pláss á leikjatöflu á einfaldri hönnun
+foxtrick.MatchTables.desc=Fjarlægir autt pláss á leikjatöflu
 foxtrick.MatchTables.RemoveTime.desc=Fjarlægir leikjatíma á núverandi leikjatöflu
 foxtrick.YouthPromotes.desc=Sýnir dagana þangað til hægt er að taka unglingaleikmann upp
 foxtrick.HTMSPrediction.desc=Bætir við spá um úrslit á leikskýrslusíðuna
@@ -327,6 +323,10 @@ foxtrick.MyMonitor.desc=Fylgjast með nýlegum leikjum hjá vinum og fjandmönnu
 foxtrick.MarkAllAsRead.desc=Hnappur til að merkja alla þræði á spjallinu sem lesna
 foxtrick.ShowFriendlyBooked.desc=Sýna hvort að lið hafi bókað vináttuleik á deildarsíðunni
 foxtrick.TickerAlert.desc=Sýna tilkynningu þegar nýr fréttariti kemur
+foxtrick.ShowLineupSet.desc=Highlight teams that have set a lineup, and/or ownerless teams, and/or winning teams in league fixture/result table
+foxtrick.ShowLineupSet.LineupSet.desc=Auðkenna lið sem hafa stillt upp liðinu
+foxtrick.ShowLineupSet.Ownerless.desc=Auðkenna eigandalaus lið
+foxtrick.ShowLineupSet.Winning.desc=Auðkenna vinningslið
 # -----------------------------------------------------------------------------
 
 
@@ -620,7 +620,6 @@ foxtrick.linkscustom.help=Hjálp
 foxtrick.linkscustom.helptext=Í fyrsta lagi, þá er þetta bara ritilssnið. Með því að smella á síðuhausinn í þessum ramma þá skiptir þú á milli ritilssnið og venjulegs sniðs. Tenglarnir þínir virka eingöngu að fullu í venjulegu sniði. Utanaðkomandi fastir tenglar er auðvelt að bæta við, bættu bara við öllu veffanginu (url) (Dæmi: http: \/\/alltid.org\/league\/427\/). Fyrir innri fasta tengla skaltu sleppa netþjónahlutanum (Dæmi: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). Þú þarft aðeins merkin fyrir fátíð kvika tengla. Með merkjum er tenglunum breytt kviklega með upplýsingunum af síðunni sem þú ert á. Sem dæmi http:\/\/alltid.org\/league\/[leagueid] myndi alltaf leiða þig á Alltid síðuna á deildinni sem þú ert að skoða á Hattrick. Merkin sem eru tiltæk á hverri síðu er listuð í valglugganum. Þú getur aðeins notað þau sem eru á listanum á síðunni sem þú ert að bæta sérsniðna tengilinum þínum. Textinn í glugganum er eingöngu sýnishornarsniðmát. Þú getur skrifað þitt merki (með því að nota []).
 foxtrick.linkscustom.helptext2=Þú getur einnig flutt út tenglana þína og deilt þeim. Til að gera það þá þarftu að smella á 'Flytja út' hnappinn og velja skrá til að vista tengilinn. Tenglum er bætt við þá skrá, þess vegna getur þú vistað marga tengla í einni skrá. Til að flytja inn tengla farðu þá í stillingargluggann og farðu í 'flytja inn´ stillingar. Aðeins færslur í valdri skrá verða fluttar inn, sem í þessu tilviki eru þínir tenglar. Enginn af fyrri tenglum þínum verður eytt.
 foxtrick.matches.income=Tekjur:
-foxtrick.newforumtoyou=ný skilaboð á spjallborði
 foxtrick.tweaks.Birthdays=Afmælisdagar
 foxtrick.tweaks.BirthdayToday=Afmæli í dag
 foxtrick.tweaks.BirthdayLastWeek=Afmæli í síðustu viku
@@ -646,8 +645,6 @@ Coach=Þjálfari
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 foxtrick.tweaks.actions=Aðgerðir
-# Look on your players page (Club -> Players) to the box title on the right with the list of players
-foxtrick.tweaks.overview=Yfirlit
 foxtrick.tweaks.writeinguestbook=Skrifa í Gestabók
 foxtrick.tweaks.copyplayerad=Afrita leikmannaauglýsingu á klippiborðið
 foxtrick.tweaks.copied=Leikmannaauglýsingin hefur verið afrituð á klippiborðið.
@@ -764,9 +761,9 @@ Youth=Yngri
 team.status.booked=Vináttuleikur bókaður
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hide_bruised=Fela lemstraða
-TransferSearchResultFilters.hide_injured=Fela meidda
-TransferSearchResultFilters.cards=Spjöld:
+TransferSearchResultFilters.hideBruised=Fela lemstraða
+TransferSearchResultFilters.hideInjured=Fela meidda
+TransferSearchResultFilters.hideSuspended=Fela í banni
 TransferSearchResultFilters.days=Dagar:
 
 # refer to transfer search form
@@ -880,6 +877,8 @@ exception.error=Villa %s
 foxtrick=FoxTrick
 preferences=Stillingar
 foxtrick.prefs.preferences=FoxTrick Stillingar
+foxtrick.log=FoxTrick Log
+
 status.active=virkur
 status.enabled=í gangi, en ekki virkur á  %s
 status.disabled=aftengdur
@@ -946,7 +945,7 @@ disable_all_foxtrick_modules_ask=Ertu viss um að þú viljir aftengja allar ein
 
 foxtrick.prefs.AdditionalOptions=Viðbótarmöguleikar
 foxtrick.prefs.smallcopyicons=Sýna afritunartáknmynd í hausnum í staðinn fyrir hliðarstiku
-foxtrick.prefs.DisplayHTMLDebugOutput=Sýna til viðbótar kembiúttak á Hattrick síðufæti (fyrir forritara)
+foxtrick.prefs.DisplayHTMLDebugOutput=Sýna FoxTrick skrá á botni á síðum (fyrir kembiúttak (debugging))
 
 
 ###EOF
